<resources>
    <string name="app_name">AndroidProject</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Open">Open</string>
    <string name="Close">Close</string>
    <string name="Like">Like</string>
    <string name="empty_fields">Empty Fields</string>
</resources>
